--- a/README
+++ b/README
@@ -70,3 +70,6 @@ Add the following to your recipe and toggle on (1) and off with (0)
 requiresWeld = 1; 
 requiresGen = 1;
 requiresToolTrolley = 1;
+
+Added additional files for those using ExAd version of BRAma Recipes. Original files altered by Novax
+to show weapons for crafting, then modified my myself to show required EBM items
