--- a/README
+++ b/README
@@ -72,4 +72,4 @@ requiresGen = 1;
 requiresToolTrolley = 1;
 
 Added additional files for those using ExAd version of BRAma Recipes. Original files altered by Novax
-to show weapons for crafting, then modified my myself to show required EBM items
+to show weapons for crafting, then modified by myself to show required EBM items
